added new feature

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     Hello, world! hello and bye for some reason.
+    ta da and hurray.
+    This the new feature.
 </body>
 </html>
