added skeleton Navbar

--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <title>Demo</title>
 </head>
 <body>
-    Hello, world! hello and bye for some reason.
-    ta da and hurray.
-    This the new feature.
+    <nav>
+        <ul>
+            <li>home</li>
+            <li>projects</li>
+            <li>skills</li>
+            <li>blog</li>
+            <li>contact</li>
+        </ul>
+    </nav>
 </body>
 </html>
