added the logo on the navbar

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <nav>
+        <div class="logo">
+            <img src="#" alt="no image">
+        </div>
         <ul>
             <li>home</li>
             <li>projects</li>
